<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ip_camera_ros2</name>
  <version>1.0.0</version>
  <description>This package provides a ROS2 package for ip camera image publishing.</description>
  <maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
  <author email="oscarpf22@gmail.com">Óscar Pons Fernández</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>
  <depend>nav2_util</depend>
  <depend>cv_bridge</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
